--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+  
+  
   <modelVersion>4.0.0</modelVersion>
   <groupId>edu.studio</groupId>
   <artifactId>github-issues</artifactId>
@@ -16,6 +18,11 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.2</version>
+         <configuration>
+				     <systemPropertyVariables>
+				       <bearer.token>${github.pat}</bearer.token>
+				     </systemPropertyVariables>
+				   </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
@@ -40,5 +47,16 @@
 			<version>5.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>com.konghq</groupId>
+		    <artifactId>unirest-java</artifactId>
+		    <version>3.13.3</version>
+		</dependency>
+		<dependency>
+		   <groupId>com.google.code.gson</groupId>
+		   <artifactId>gson</artifactId>
+		   <version>2.8.6</version>
+		</dependency>
+		
 	</dependencies>
 </project>
